k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kampusumden-backend-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "kampusumden-backend-config"}'
spec:
  type: NodePort
  selector:
    app: kampusumden-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
